Fix the issue with hamburger menu on Firefox. Closes #93.

--- a/app/assets/stylesheets/components/_slideout_menu.scss
+++ b/app/assets/stylesheets/components/_slideout_menu.scss
@@ -22,8 +22,8 @@
   font-family: $heading-font-family;
   a {
     @include link-color-scheme($warm-black, $warm-black);
-    padding: $large-spacing;
-    padding-right: 100px;
+    display: inline-block;
+    width: 100%;
   }
   li {
     margin-bottom: $large-spacing;
